syntax = "proto3";

package pb;

option go_package = "github.com/lazyxu/kfs/warpper/grppcweb/pb";

service KoalaFS {
    rpc ls (PathReq) returns (FilesResponse) {
    }
    rpc cp (MoveRequest) returns (PathList) {
    }
    rpc mv (MoveRequest) returns (Void) {
    }
    rpc newFile (PathReq) returns (Path) {
    }
    rpc newDir (PathReq) returns (Path) {
    }
    rpc remove (PathList) returns (Void) {
    }
    rpc download (PathList) returns (DownloadResponse) {
    }
    rpc upload (UploadRequest) returns (UploadResponse) {
    }
    rpc uploadBlob (stream StreamData) returns (Hash) {
    }
    rpc uploadTree (stream StreamData) returns (Hash) {
    }
    rpc updateRef (Ref) returns (Void) {
    }
    rpc branches (Void) returns (Branches) {
    }
    rpc status (Void) returns (Status) {
    }
}

message Status {
    string totalSize = 1;
    string fileSize = 2;
    uint64 fileCount = 3;
    uint64 dirCount = 4;
}

message Branches {
    repeated string branch = 1;
}

message Ref {
    string ref = 1;
}

message StreamData {
    bytes data = 1;
}

message Hash {
    string hash = 1;
}

message PathReq {
    string branch = 1;
    string path = 2;
}

message Path {
    string path = 1;
}

message PathList {
    string branch = 1;
    repeated string path = 2;
}

message FilesResponse {
    repeated FileStat files = 1;
}

message FileInfos {
    repeated FileInfo info = 1;
}

message FileInfo {
    string name = 1;
    string type = 2;
    int64 size = 3;
    uint32 mode = 4;
    int64 atimeNs = 5;
    int64 mtimeNs = 6;
    int64 ctimeNs = 7;
    int64 birthtimeNs = 8;
    string hash = 10;
}

message FileStat {
    string name = 1;
    string type = 2;
    int64 size = 3;
    int64 atimeMs = 4;
    int64 mtimeMs = 5;
    int64 ctimeMs = 6;
    int64 birthtimeMs = 7;
    repeated FileStat files = 8;
}

message MoveRequest {
    string srcBranch = 1;
    repeated string srcPath = 2;
    string dstBranch = 3;
    string dstPath = 4;
}

message Void {
}

message DownloadResponse {
    repeated string hash = 1;
}

message UploadRequest {
    string branch = 1;
    string path = 2;
    string hash = 3;
    int64 size = 4;
}

message UploadResponse {
    repeated FileStat files = 1;
}

message Header {
    int32 method = 1;
    bytes hash = 2;
    uint64 rawSize = 5;
}
